k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-as-challenge
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app-as-challenge
  name: app-as-challenge-deployment
  labels:
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: app-node
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-as-challenge
  replicas: 1
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: app-node
        app.kubernetes.io/name: app-as-challenge
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/js-lib.version: v5.28.0
    spec:
      containers:
      - image: 471112631123.dkr.ecr.us-east-1.amazonaws.com/app-as-challenge:latest
        imagePullPolicy: Always
        name: app-as-challenge
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: app-as-challenge
  name: app-as-challenge-service
spec:
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-as-challenge
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app-as-challenge
  name: app-as-challenge-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-as-challenge-service
              port:
                number: 80
